--- a/css/cairn.css
+++ b/css/cairn.css
@@ -26,7 +26,7 @@
 }
 
 .cairn .window-content {
-    background-color: #f5f5f5;
+    background-color: #CCC8E3;
     background-image: none;
 }
 
@@ -41,8 +41,8 @@
 .charater-sheet-grid {
     display: grid;
     gap: 8px;
-    grid-template-columns: 140px 1fr 1fr;
-    grid-template-rows: 140px 112px 1fr;
+    grid-template-columns: 200px 1fr 1fr;
+    grid-template-rows: 200px 112px 1fr;
     height: 100%;
 }
 
@@ -53,7 +53,7 @@
     display: grid;
     column-gap: 8px;
     row-gap: 2px;
-    grid-template-rows: 46px 24px 66px;
+    grid-template-rows: 46px 24px 24px 24px 66px;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -143,7 +143,7 @@
 .portrait {
     border: 2px solid black;
     border-radius: 5px;
-    height: 140px;
+    height: 200px;
     width: 100%;
     object-fit: contain;
 }
@@ -173,8 +173,32 @@
     font-size: 17px !important;
     font-variant: small-caps;
     height: 100% !important;
+    text-align: center !important;
 }
 
+.omen-input {
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+    background: none !important;
+    border: none !important;
+    font-family: "Alegreya", Times, "Times New Roman", Georgia, serif !important;
+    font-size: 12px !important;
+    height: 100% !important;
+    word-break: break-all !important; 
+}
+
+.bond-input {
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+    background: none !important;
+    border: none !important;
+    font-family: "Alegreya", Times, "Times New Roman", Georgia, serif !important;
+    font-size: 12px !important;
+    height: 100% !important;
+    word-break: break-all;
+}
 /******************************************************************************
  * Generic resources counters style.                                          * 
  ******************************************************************************/
