--- a/css/cairn.css
+++ b/css/cairn.css
@@ -53,7 +53,7 @@
     display: grid;
     column-gap: 8px;
     row-gap: 2px;
-    grid-template-rows: 46px 24px 24px 24px 66px;
+    grid-template-rows: 46px 24px 48px 48px 66px;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -185,19 +185,16 @@
     font-family: "Alegreya", Times, "Times New Roman", Georgia, serif !important;
     font-size: 12px !important;
     height: 100% !important;
-    word-break: break-all !important; 
 }
 
 .bond-input {
     grid-column-start: 1;
     grid-column-end: 3;
 
-    background: none !important;
-    border: none !important;
+    border: solid !important;
     font-family: "Alegreya", Times, "Times New Roman", Georgia, serif !important;
     font-size: 12px !important;
-    height: 100% !important;
-    word-break: break-all;
+    height: 200% !important;
 }
 /******************************************************************************
  * Generic resources counters style.                                          * 
